asset/css/admin.css
/* Globals */

#page-action-menu {
    display: inline-block;
    position: relative;
}

#page-action-menu ul {
    display: none;
    list-style: none;
    border: 1px solid #dfdfdf;
    background-color: #fff;
    border-radius: 3px;
    text-align: left;
    padding: 0;
    position: relative;
    box-shadow: 0 0 5px #dfdfdf;
    position: absolute;
    right: 0;
    width: auto;
    white-space: nowrap;
    margin: 12px 0;
}

#page-action-menu ul:before {
    content: "";
    position: absolute;
    bottom: calc(100% - 1px);
    right: 12px;
    width: 0;
    height: 0;
    border-bottom: 12px solid #fff;
    border-left: 6px solid transparent;
    border-right: 6px solid transparent;
}

#page-action-menu ul:after {
    content: "";
    position: absolute;
    bottom: calc(100% - 1px);
    right: 11px;
    width: 0;
    height: 0;
    border-bottom: 14px solid #dfdfdf;
    border-left: 7px solid transparent;
    border-right: 7px solid transparent;
    z-index: -1;
}

#page-action-menu ul a,
#page-action-menu ul .inactive {
    padding: 6px 12px 5px;
    display: block;
    position: relative;
}

#page-action-menu ul .inactive {
    color: #dfdfdf;
}

#page-action-menu ul a:hover:before {
    content: "";
    position: absolute;
    left: 0;
    top: 0;
    bottom: 0;
    width: 3px;
    background-color: #dfdfdf;
}

#page-action-menu ul li:not(:last-child) a,
#page-action-menu ul li:not(:last-child) span {
    border-bottom: 1px solid #dfdfdf;
}

#page-action-menu .expand:after {
    content: "\f0d7";
}

#page-action-menu .expand:after,
#page-action-menu .collapse:after {
    margin-left: 6px;
}

#page-action-menu .collapse + .collapsible {
    overflow: visible;
    display: block;
}

.breadcrumbs > *:not(:last-child):after {
    content: none;
}

.breadcrumbs .separator {
    display: inline-block;
    margin: 0 6px;
    color: #000;
}

.breadcrumbs .separator:after {
    content: "\f0da";
    font-family: "Font Awesome 5 Free";
    margin: 0;
    font-weight: 900;
}

/* Browse */

.browse .browse-controls {
    justify-content: space-between;
    width: 100%;
    clear: both;
}

.browse .browse-controls > form,
.browse .browse-controls > div,
.browse .browse-controls > nav,
.browse .browse-controls > a {
    width: 50%;
}

.browse .browse-controls .sorting,
.browse .browse-controls .filtering {
    text-align: right;
}

.browse-controls .pagination {
    order: 1;
}

.browse-controls .sorting {
    order: 2;
}

.browse-controls > a {
  order: 3;
}

.browse-controls .filtering {
  order: 4;
  margin-left: 0;
}

.alert {
  text-indent: -9999px;
  display: inline-block;
  position: relative;
  width: 1rem;
  margin-right: .5rem;
  color: #A91919;
}

.alert:before {
  content: "\f06a";
  font-family: "Font Awesome 5 Free";
  position: absolute;
  top: 50%;
  left: 50%;
  text-indent: 0;
  text-align: center;
  transform: translateX(-50%) translateY(-50%);
}

.record.browse .record-number-cell {
  display: flex;
  flex-wrap: wrap;
  justify-content: flex-end;
}

.record.browse .record-number-cell .actions {
  margin-left: 0;
}

.record-number-cell input[type="checkbox"] {
  margin-right: auto;
}

.record.browse #batch-form {
  position: relative;
}

.last.record-meta {
  border-right: 1px solid #dfdfdf;
}

.tablesaw-bar {
  position: absolute;
  top: 0;
  right: 0;
  width: 50%;
  padding: 2px .5rem 0 0;
}

.primary-field {
  background-color: rgba(0,0,0,.04);
}

.tablesaw-swipe-wrapper {
  position: relative;
  padding-top: 2.5rem;
  width: 100%;
}

.tablesaw-swipe-wrapper > .tablesaw-bar:before {
  content: "";
  background-color:rgba(0,0,0,0.04);  
  position: absolute;
  top: 0;
  bottom: 3px;
  left: -100%;
  right: 0;
  border: 1px solid #dfdfdf;
  border-width: 1px 1px 0 1px;
  border-radius: 3px 3px 0 0;
  padding: 5px;
}

.batch-inputs ~ .tablesaw-swipe-wrapper {
  margin-top: -2.5rem;
}

.batch-inputs ~ .tablesaw-swipe-wrapper .tablesaw-bar {
  margin-top: 4px;
}
.batch-inputs ~ .tablesaw-swipe-wrapper > .tablesaw-bar:before {
  content: none;.
} 

.tablesaw-swipe-wrapper > .tablesaw-bar + .tablesaw {
  border-radius: 0;
}

.tablesaw-swipe-wrapper th,
.record.browse th {
  width: 7rem;
}

/* Record Add/Edit */

.record.add div[role="main"], 
.record.edit div[role="main"] {
  overflow: visible;
}

.add-edit-header {
  position: sticky;
  top: 60px;
  background-color: #fff;
  z-index: 1;
  border-bottom: 1px solid #dfdfdf;
  padding: 0 0 6px 0;
  display: flex;
  justify-content: space-between;
}

.add-edit-header:before {
  content: "";
  position: absolute;
  top: -24px;
  left: -12px;
  right: -12px;
  height: 48px;
  background-color: #fff;
}

.add-edit-header > div {
  width: calc(50% - 6px);
}

.tablesaw-swipe-wrapper > h3 {
  position: absolute;
  top: 8px;
  left: 8px;
  font-size: 16px;
}

/* Form Builder */

#form-builder-fields .dataset-field {
  position: relative;
  padding: 4px;
  background-color: rgba(0,0,0,0.04);
  margin-bottom: 8px;
}

.dataset-field > legend {
  float: left;
  display: flex;
  align-items: center;
  padding: 0;
  font-weight: bold;
  position: relative;
  margin-top: -4px;
  width: calc(100% - 192px);
  height: 44px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  margin-bottom: 8px;
}

#form-builder-fields .dataset-field:before {
  content: "";
  position: absolute;
  top: 0;
  right: 0;
  left: 0;
  height: 44px;
  background-color: rgba(0,0,0,0.12);
}

#form-builder-fields .dataset-field.closed legend {
  margin-bottom: 0;
}

legend .data-type-label {
  font-weight: normal;
  font-size: 14px;
  padding: 0 8px;
  background-color: rgba(0,0,0,.5);
  color: #fff;
  display: inline-block;
  position: relative;
  letter-spacing: 1px;
  margin-left: 16px;
  max-width: 50%;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

legend .field-label {
  position: relative;
  max-width: calc(100% - 296px);
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.field-actions {
  position: absolute;
  top: 0;
  right: 4px;
  margin-top: 4px;
  text-align: right;
  z-index: 10;
}

.field-actions button {
  box-shadow: none;
  background-color: transparent;
  opacity: .75;
  cursor: pointer;
  width: 36px;
}

.field-actions button:hover {
  box-shadow: none;
  opacity: 1;
  cursor: pointer;
}

#form-builder-fields .dataset-field:only-of-type .field-position-increment,
#form-builder-fields .dataset-field:only-of-type .field-position-decrement,
#form-builder-fields .dataset-field:first-of-type .field-position-decrement,
#form-builder-fields .dataset-field:last-of-type .field-position-increment {
  display: none;
}

.field-enable,
.field-disable,
.field-collapse,
.field-expand {
  display: none;
}

.field-actions .active {
  display: inline-block;
}

#form-builder-fields .field {
  padding: 0;
  border-color: transparent;
  background-color: transparent;
}

fieldset.closed .field,
fieldset.closed .dataset-field-data legend {
  height: 0;
  overflow: hidden;
  margin: 0;
  padding: 0;
}

#form-builder-fields .dataset-field:not(.open) {
  padding-bottom: 0;
}

#form-builder-fields .dataset-field.deleted:before {
  background-color: #fcc;
}

#form-builder-fields .dataset-field.deleted button:disabled {
  display: none;
}

#form-builder-fields .dataset-field.deleted button {
  color: #A91919;
}

#form-builder-fields .dataset-field.deleted .data-type-label {
  background-color: #A9191987;
}

.dataset-field.closed .dataset-field-data {
  margin: 0;
}

fieldset.open .dataset-field-data legend {
  border-bottom: 1px solid #dfdfdf;
  margin: 0 0 6px;
  width: 100%;
  padding: 6px 0;
  font-size: 16px
}

/* Sidebar */

body.sidebar-open #content.expanded {
    width: calc(81.25% - 12px);
}

.sidebar.always-open {
    padding-left: 23px;
}

.sidebar.always-open.collapsed {
    left: 100%;
}

button.sidebar-drawer {
    position: fixed;
    top: 48px;
    left: 75%;
    bottom: -12px;
    width: 12px;
    padding: 0;
    border-radius: 0;
    background-color: #f7f7f7;
    box-shadow: none;
    border-right: 1px solid #dfdfdf;
    border-left: 1px solid #dfdfdf;
    transition: left .5s;
    z-index: 1;
}

button.sidebar-drawer.expand {
    left: calc(100% - 12px);
}

button.sidebar-drawer:hover {
    box-shadow: none;
}

button.sidebar-drawer:after {
    color: #676767;
    font-size: 12px;
    text-align: center;
    margin-left: 0;
}

button.sidebar-drawer.expand:after {
    content: "\f104";
}

button.sidebar-drawer.collapse:after {
    content: "\f105";
}

/* Media Viewer */

.media-viewer,
.records-list {
  width: 50%;
}

.media-viewer {
  margin-right: 12px;
  position: -webkit-sticky;
  position: sticky;
  top: 60px;
}

.media-select {
  display: flex;
  margin-bottom: 6px;
}

.media-viewer select {
  width: 50%;
}

.media.pagination {
  display: flex;
  width: 50%;
  align-items: center;
  justify-content: flex-end;
  margin-bottom: 0;
}

.media-count {
  margin: 0 6px;
}

.media.pagination input {
  max-width: 25%;
}

.media.pagination button {
  margin: 0;
}

.media-viewer .media-container {
  margin-bottom: 6px;
  border: 1px solid #ccc;
}

.media-viewer .media-render {
  margin-bottom: 0;
  overflow: hidden;
}

.media-viewer img {
  max-width: 100%;
  height: auto;
  vertical-align: bottom;
}

.zoom-controls {
    position: absolute;
    top: 12px;
    left: 12px;
    z-index: 1;
    display: flex;
}

.zoom-controls button {
    position: relative;
    overflow: hidden;
    border-radius: 0;
    margin-left: -1px;
    box-shadow: none;
    border: 1px solid #dfdfdf;
    min-height: 0;
    padding: 3px 6px;
    font-size: 14px;
    line-height: 21px;
}

.zoom-controls button:first-child {
    border-radius: 3px 0 0 3px;
}

.zoom-controls button:last-child {
    border-radius: 0 3px 3px 0;
}

.zoom-controls button:after {
    content: "";
    position: absolute;
    top: 0;
    bottom: 0;
    right: 0;
    left: 0;
    background-color: #fff;
    z-index: -1;
}

.zoom-controls button:before {
    font-family: "Font Awesome 5 Free";
    font-weight: 900;
}

.zoom-in:before {
    content: "\f00e";
}

.zoom-out:before {
    content: "\f010";
}

.rotate-left:before {
    content: "\f2ea";
}

.rotate-right:before {
    content: "\f2f9";
}

